# dmx

./: .gitignore  README.md  predemux_mockup.py  pyproject.toml
dataflow_demux/yggdrasil_realm/: descriptor.py  handler.py  recipes.py  steps.py  utils.py
dataflow_dmx/: cli.py  main.py
dataflow_dmx/core/adapters/: elembio.py  illumina_mixin.py
dataflow_dmx/core/flows/: predemux.py
dataflow_dmx/core/pipelines/: demux.py
dataflow_dmx/core/utils/: samplesheet_db_manager.py
dataflow_dmx/yggdrasil_realm/: flowcell_handler.py
dmx/: cli.py  dmx.py
dmx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
legacy_prototype/dmx/: dmx.py
tests/: test_prepare.py  test_realm_handler.py
