[project]
name = "dmx"
version = "0.0.1"
description = "Helper script for pre- and post-processing of demultiplexing"
authors = [
    { name = "Sara Sjunnebo", email = "sara.sjunnebo@scilifelab.se" },
    { name = "Anastasios Glaros", email = "anastasios.glaros@scilifelab.se" }
]
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "prefect>=3.4.5",
    "pandas",
    "click",
]

[project.optional-dependencies]
ygg = [
    "yggdrasil @ git+https://github.com/NationalGenomicsInfrastructure/Yggdrasil.git@dev",
]

dev = [
    "ruff>=0.11.8",
    "pytest",
]

[project.scripts]
# dataflow-dmx = "dataflow_demux.cli:cli" # Disabled until migrated

[project.entry-points."ygg.realm"]
dmx_realm = "dataflow_demux.yggdrasil_realm.descriptor:get_realm_descriptor"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pyright]
extraPaths = ["../Yggdrasil"]

[tool.mypy]
mypy_path = ["../Yggdrasil"]
